--- a/gg-pac-team3-back/package.json
+++ b/gg-pac-team3-back/package.json
@@ -9,9 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-favicon": "^2.0.4",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0"
   },
