Swagger Documentation Routes

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
