--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+# Optional eslint cache
+.eslintcache
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +24,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-/.env
+
+.env
+
+
+
