--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
-/.idea/
+# --- Universal ---
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependency directories
+node_modules/
+
+# Optional caches
+.npm
+.eslintcache
+
+# dotenv environment variables file & local files
+.env
+*.local
+
+# Other
+.DS_Store
+
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/extensions.json
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# --- Backend ---
+
+# Service Account Key firebase
+learninghub-ggpacteam3-firebase-adminsdk-zexw0-e7cfeb2116.json
+
+# --- Frontend ---
+
+dist
+dist-ssr
