--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-mock-req-res": "^1.0.2",
 		"nodemon": "^2.0.21",
-		"vite": "^5.3.4"
+		"puppeteer": "^23.1.1",
+		"supertest": "^7.0.0",
+		"vite": "^5.3.4",
+		"wait-on": "^7.0.1"
 	},
 	"scripts": {
 		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
@@ -40,6 +46,15 @@
 		"dev:server": "nodemon server/server.mjs",
 		"dev:client": "vite",
 		"build:client": "vite build",
-		"preview:client": "vite preview"
+		"preview:client": "vite preview",
+		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
+		"test:user": "npm test -- __tests__/backend/userController.tests.mjs",
+   		"test:frontpage": "npm test -- __tests__/frontend/frontpage.tests.mjs",
+    	"test:course": "npm test -- __tests__/backend/courseController.tests.mjs",
+    	"test:lesson": "npm test -- __tests__/backend/lessonController.tests.mjs",
+		"test:quiz": "npm test -- __tests__/backend/quizController.tests.mjs",
+        "test:userCourse": "npm test -- __tests__/backend/userCourseController.tests.mjs",
+		"test:main": "npm test -- __tests__/backend/mainController.tests.mjs"
+
 	}
 }
