--- a/package.json
+++ b/package.json
@@ -23,15 +23,24 @@
 		"swagger-ui-express": "^5.0.1"
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-modules-commonjs": "^7.24.8",
+		"@babel/preset-env": "^7.25.4",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"babel-jest": "^29.7.0",
+		"babel-plugin-transform-import-meta": "^2.2.1",
 		"concurrently": "^8.2.2",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-mock-req-res": "^1.0.2",
 		"nodemon": "^2.0.21",
+		"puppeteer": "^23.1.1",
+		"supertest": "^7.0.0",
 		"vite": "^5.3.4"
 	},
 	"scripts": {
@@ -40,6 +49,7 @@
 		"dev:server": "nodemon server/server.mjs",
 		"dev:client": "vite",
 		"build:client": "vite build",
-		"preview:client": "vite preview"
+		"preview:client": "vite preview",
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
 	}
 }
