course and lesson testing

--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
 		"dev:client": "vite",
 		"build:client": "vite build",
 		"preview:client": "vite preview",
-		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+		"test:user": "npm test -- __tests__/userController.tests.mjs",
+   		"test:frontpage": "npm test -- __tests__/frontpage.tests.mjs",
+    	"test:course": "npm test -- __tests__/courseController.tests.mjs",
+    	"test:lesson": "npm test -- __tests__/lessonController.tests.mjs"
 	}
 }
