--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,6 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "useTabs": false
 }
