--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 		"nodemon": "^2.0.21",
 		"puppeteer": "^23.1.1",
 		"supertest": "^7.0.0",
-	  "vite": "^5.3.4",
-	  "wait-on": "^7.0.1"
+	    "vite": "^5.3.4",
+	    "wait-on": "^7.0.1"
 	},
 	"scripts": {
 		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
@@ -47,6 +47,10 @@
 		"dev:client": "vite",
 		"build:client": "vite build",
 		"preview:client": "vite preview",
-	  "test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\""
+		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
+		"test:user": "npm test -- __tests__/userController.tests.mjs",
+   		"test:frontpage": "npm test -- __tests__/frontpage.tests.mjs",
+    	"test:course": "npm test -- __tests__/courseController.tests.mjs",
+    	"test:lesson": "npm test -- __tests__/lessonController.tests.mjs"
 	}
 }
