--- a/package.json
+++ b/package.json
@@ -1,53 +1,65 @@
 {
-  "name": "learning-hub",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cloudinary": "^2.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-favicon": "^2.0.4",
-    "firebase": "^10.12.4",
-    "firebase-admin": "^12.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "mongoose": "^7.0.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "nodemon": "^2.0.21",
-    "prettier": "^3.3.3",
-    "vite": "^5.3.4"
-  },
-  "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "build": "npm run build:client",
-    "dev:server": "nodemon server/server.mjs",
-    "dev:client": "vite",
-    "build:client": "vite build",
-    "preview:client": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.mjs",
-    "prettier": "prettier . --write"
-  }
+	"name": "learning-hub",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.7.2",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
+		"cloudinary": "^2.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-favicon": "^2.0.4",
+		"firebase": "^10.12.4",
+		"firebase-admin": "^12.3.0",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
+		"mongoose": "^7.0.1",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.26.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1"
+	},
+	"devDependencies": {
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"concurrently": "^8.2.2",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.3",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"eslint-plugin-react-refresh": "^0.4.7",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jest-mock-req-res": "^1.0.2",
+		"nodemon": "^2.0.21",
+		"prettier": "^3.3.3",
+		"puppeteer": "^23.1.1",
+		"supertest": "^7.0.0",
+		"vite": "^5.3.4",
+		"wait-on": "^7.0.1"
+	},
+	"scripts": {
+		"dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+		"build": "npm run build:client",
+		"dev:server": "nodemon server/server.mjs",
+		"dev:client": "vite",
+		"build:client": "vite build",
+		"preview:client": "vite preview",
+		"lint": "eslint . --ext .js,.jsx,.mjs",
+		"prettier": "prettier . --write",
+		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
+		"test:user": "npm test -- __tests__/backend/userController.tests.mjs",
+		"test:frontpage": "npm test -- __tests__/frontend/frontpage.tests.mjs",
+		"test:course": "npm test -- __tests__/backend/courseController.tests.mjs",
+		"test:lesson": "npm test -- __tests__/backend/lessonController.tests.mjs",
+		"test:quiz": "npm test -- __tests__/backend/quizController.tests.mjs",
+		"test:userCourse": "npm test -- __tests__/backend/userCourseController.tests.mjs",
+		"test:main": "npm test -- __tests__/backend/mainController.tests.mjs"
+	}
 }
