--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"express-favicon": "^2.0.4",
 		"firebase": "^10.12.4",
 		"firebase-admin": "^12.3.0",
+		"jest-mock": "^29.7.0",
 		"google-auth-library": "^9.14.1",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^4.0.0",
