--- a/package.json
+++ b/package.json
@@ -56,12 +56,7 @@
 		"lint": "eslint . --ext .js,.jsx,.mjs",
 		"prettier": "prettier . --write",
 		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
-		"test:user": "npm test -- __tests__/backend/userController.tests.mjs",
-		"test:frontpage": "npm test -- __tests__/frontend/frontpage.tests.mjs",
-		"test:course": "npm test -- __tests__/backend/courseController.tests.mjs",
-		"test:lesson": "npm test -- __tests__/backend/lessonController.tests.mjs",
-		"test:quiz": "npm test -- __tests__/backend/quizController.tests.mjs",
-		"test:userCourse": "npm test -- __tests__/backend/userCourseController.tests.mjs",
-		"test:main": "npm test -- __tests__/backend/mainController.tests.mjs"
+        "test:backend": "jest --runInBand --testPathPattern=__tests__/backend",
+        "test:frontend": "jest --runInBand --testPathPattern=__tests__/frontend"
 	}
 }
