--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"express-favicon": "^2.0.4",
 		"firebase": "^10.12.4",
 		"firebase-admin": "^12.3.0",
-		"jest-mock": "^29.7.0",
 		"google-auth-library": "^9.14.1",
+		"jest-mock": "^29.7.0",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^4.0.0",
 		"mongoose": "^7.0.1",
@@ -56,12 +56,7 @@
 		"lint": "eslint . --ext .js,.jsx,.mjs",
 		"prettier": "prettier . --write",
 		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
-		"test:user": "npm test -- __tests__/backend/userController.tests.mjs",
-		"test:frontpage": "npm test -- __tests__/frontend/frontpage.tests.mjs",
-		"test:course": "npm test -- __tests__/backend/courseController.tests.mjs",
-		"test:lesson": "npm test -- __tests__/backend/lessonController.tests.mjs",
-		"test:quiz": "npm test -- __tests__/backend/quizController.tests.mjs",
-		"test:userCourse": "npm test -- __tests__/backend/userCourseController.tests.mjs",
-		"test:main": "npm test -- __tests__/backend/mainController.tests.mjs"
+		"test:backend": "jest --runInBand --testPathPattern=__tests__/backend",
+		"test:frontend": "jest --runInBand --testPathPattern=__tests__/frontend"
 	}
 }
