--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"engines": {
+	  "node": "20.11.1"
+	},
 	"dependencies": {
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
@@ -53,6 +56,7 @@
 		"dev:client": "vite",
 		"build:client": "vite build",
 		"preview:client": "vite preview",
+	    "start": "node server/server.mjs",
 		"lint": "eslint . --ext .js,.jsx,.mjs",
 		"prettier": "prettier . --write",
 		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
