--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"engines": {
-	  "node": "20.11.1"
+		"node": "20.11.1"
 	},
 	"dependencies": {
 		"axios": "^1.7.2",
@@ -13,7 +13,7 @@
 		"cloudinary": "^2.4.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
-		"express": "^4.19.2",
+		"express": "^5.0.0",
 		"express-favicon": "^2.0.4",
 		"firebase": "^10.12.4",
 		"firebase-admin": "^12.3.0",
@@ -42,7 +42,7 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-mock-req-res": "^1.0.2",
-		"nodemon": "^2.0.21",
+		"nodemon": "^3.1.4",
 		"prettier": "^3.3.3",
 		"puppeteer": "^23.1.1",
 		"supertest": "^7.0.0",
@@ -56,7 +56,7 @@
 		"dev:client": "vite",
 		"build:client": "vite build",
 		"preview:client": "vite preview",
-	    "start": "node server/server.mjs",
+		"start": "NODE_ENV=production npm run build:client && node server/server.mjs",
 		"lint": "eslint . --ext .js,.jsx,.mjs",
 		"prettier": "prettier . --write",
 		"test": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --runInBand\"",
