--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"nodemon": "^3.1.4",
 		"prettier": "^3.3.3",
 		"puppeteer": "^23.1.1",
+		"rollup": "^4.21.2",
 		"supertest": "^7.0.0",
 		"vite": "^5.3.4",
 		"wait-on": "^7.0.1"
