--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"build:client": "vite build",
 		"preview:client": "vite preview",
 	    "start:server": "NODE_ENV=production node server/server.mjs",  
-	    "start:client": "vite preview",                                 
+	    "start:client": "vite",                                 
 		"start": "NODE_ENV=production concurrently \"npm run start:server\" \"npm run start:client\"",
 		"lint": "eslint . --ext .js,.jsx,.mjs",
 		"prettier": "prettier . --write",
